testdata/baselines/reference/compiler/typeofSwitchEmptyStringCase.errors.txt
typeofSwitchEmptyStringCase.ts(5,10): error TS2678: Type '""' is not comparable to type '"bigint" | "boolean" | "function" | "number" | "object" | "string" | "symbol" | "undefined"'.


==== typeofSwitchEmptyStringCase.ts (1 errors) ====
    // https://github.com/microsoft/typescript-go/issues/3909
    
    function f(x: string | number) {
      switch (typeof x) {
        case "":
             ~~
!!! error TS2678: Type '""' is not comparable to type '"bigint" | "boolean" | "function" | "number" | "object" | "string" | "symbol" | "undefined"'.
        case "string":
          x.charAt(0);
          break;
      }
    }
    